--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"moment": "^2.29.4",
 		"mongodb": "^4.13.0",
 		"mongoose": "^6.8.1"
 	},
